# wurds

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
assets/: demo.tape
src/: cli.rs  main.rs  parser.rs
