[package]
name = "wurds"
description = "Rust rewrite of wc with an interactive count-up."
version = "1.1.0"
repository = "https://github.com/tryton-vanmeer/wurds"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
keywords = ["wc"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"

[build-dependencies]
anyhow = "1"

[profile.release]
strip = true
lto = true
